--- a/main.html
+++ b/main.html
@@ -7,16 +7,16 @@
 </head>
 
 <body>
-	<div class="holder-top">
+	<!-- <div class="holder-top">
     <div class="item green">3</div>
     <div class="item red">1</div>
     <div class="item blue">2</div>
   </div>
-
+ -->
   <h2>For flex-wrap illustration:</h2>
 
   <!-- ---------- SECOND LAYOUT (WRAP) ---------- -->
-  <div class="holder-wrap">
+  <div class="holder">
     <div class="item green">3</div>
     <div class="item green">4</div>
     <div class="item green">5</div>
